--- a/fabric-多机-kafka/正式环境/11/base/kafka-base.yaml
+++ b/fabric-多机-kafka/正式环境/11/base/kafka-base.yaml
@@ -8,7 +8,7 @@ version: '2'
 services:
 
   zookeeper:
-    image: hyperledger/fabric-zookeeper
+    image: hyperledger/fabric-zookeeper:0.4.10
     restart: always
     environment:
       - quorumListenOnAllIPs=true
@@ -18,7 +18,7 @@ services:
       - 3888:3888
   
   kafka:
-    image: hyperledger/fabric-kafka
+    image: hyperledger/fabric-kafka:0.4.10
     restart: always
     environment:
       # message.max.bytes
