--- a/fabric-多机-kafka/正式环境/11/docker-compose-peer.yaml
+++ b/fabric-多机-kafka/正式环境/11/docker-compose-peer.yaml
@@ -7,22 +7,26 @@ version: '2'
 
 services:
 
-  # couchdb0.org1.lychee.com:
-  #   container_name: couchdb0.org1.lychee.com
-  #   image: hyperledger/fabric-couchdb
-   #  volumes:
-   #    - ./chainData/couchdb/couchdb0org1:/opt/couchdb/data
+ couchdb0:
+   container_name: couchdb0
+   image: hyperledger/fabric-couchdb:0.4.10
+   volumes:
+     - ./chainData/couchdb/couchdb0org1:/opt/couchdb/data
+   ports:
+     - "6984:5984"
 
-  peer0.org1.hf.chainhero.io:
-    container_name: peer0.org1.hf.chainhero.io
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer0.org1.hf.chainhero.io
-    # environment:
-   #    - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-    #   - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb0.org1.lychee.com:5984
-    extra_hosts:
-      - "orderer.hf.chainhero.io:114.115.200.251"
-      - "orderer1.hf.chainhero.io:39.104.77.237"
-      - "peer1.org1.hf.chainhero.io:39.104.77.237"
+ peer0.org1.hf.chainhero.io:
+  container_name: peer0.org1.hf.chainhero.io
+  extends:
+    file:  base/docker-compose-base.yaml
+    service: peer0.org1.hf.chainhero.io
+  environment:
+   - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+   - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb0:5984
+  depends_on:
+    - couchdb0
+  extra_hosts:
+    - "orderer.hf.chainhero.io:114.115.200.251"
+    - "orderer1.hf.chainhero.io:47.90.98.63"
+    - "peer1.org1.hf.chainhero.io:47.90.98.63"
       
