--- a/fabric-多机-kafka/正式环境/22/base/docker-compose-base.yaml
+++ b/fabric-多机-kafka/正式环境/22/base/docker-compose-base.yaml
@@ -42,7 +42,7 @@ services:
       - CORE_PEER_CHAINCODELISTENADDRESS=peer0.org1.hf.chainhero.io:7052
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.hf.chainhero.io:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.hf.chainhero.io:7051
-      - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_PEER_LOCALMSPID=org1.hf.chainhero.io
     volumes:
         - /var/run/:/host/var/run/
         # 数据固化，将peer的数据映射到本地，防止丢失
@@ -64,14 +64,13 @@ services:
       - CORE_PEER_CHAINCODELISTENADDRESS=peer1.org1.hf.chainhero.io:7052
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org1.hf.chainhero.io:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org1.hf.chainhero.io:7051
-      - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_PEER_LOCALMSPID=org1.hf.chainhero.io
     volumes:
         - /var/run/:/host/var/run/
         # 数据固化，将peer的数据映射到本地，防止丢失
         - ./chainData/peer/peer1org1:/var/hyperledger/production/
         - ../crypto-config/peerOrganizations/org1.hf.chainhero.io/peers/peer1.org1.hf.chainhero.io/msp:/etc/hyperledger/fabric/msp
         - ../crypto-config/peerOrganizations/org1.hf.chainhero.io/peers/peer1.org1.hf.chainhero.io/tls:/etc/hyperledger/fabric/tls
-
     ports:
       - 7051:7051
       - 7052:7052
