--- a/fabric-多机-kafka/正式环境/22/base/orderer-base.yaml
+++ b/fabric-多机-kafka/正式环境/22/base/orderer-base.yaml
@@ -8,14 +8,14 @@ version: '2'
 services:
 
   orderer-base:
-     image: hyperledger/fabric-orderer
+     image: hyperledger/fabric-orderer:1.2.0
      environment:
       - ORDERER_GENERAL_LOGLEVEL=debug
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_LISTENPORT=7050
       - ORDERER_GENERAL_GENESISMETHOD=file
       - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/orderer/orderer.genesis.block
-      - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
+      - ORDERER_GENERAL_LOCALMSPID=hf.chainhero.io
       - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/orderer/msp
       # enabled TLS
       - ORDERER_GENERAL_TLS_ENABLED=true
@@ -27,7 +27,7 @@ services:
       - ORDERER_KAFKA_RETRY_SHORTINTERVAL=1s
       - ORDERER_KAFKA_RETRY_SHORTTOTAL=30s
       - ORDERER_KAFKA_VERBOSE=true
-      - ORDERER_KAFKA_BROKERS=[114.115.200.251:9092,39.104.77.237:9092]
+      - ORDERER_KAFKA_BROKERS=[114.115.200.251:9092,47.90.98.63:9092]
      working_dir: /opt/gopath/src/github.com/hyperledger/fabric
      command: orderer
      volumes:
