--- a/fabric-多机-kafka/正式环境/22/base/peer-base.yaml
+++ b/fabric-多机-kafka/正式环境/22/base/peer-base.yaml
@@ -6,13 +6,13 @@
 version: '2'
 services:
   peer-base:
-    image: hyperledger/fabric-peer
+    image: hyperledger/fabric-peer:1.2.0
     environment:
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       # the following setting starts chaincode containers on the same
       # bridge network as the peers
       # https://docs.docker.com/compose/networking/
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=e2ecli_default
+      #- CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=22_default
       #- CORE_LOGGING_LEVEL=ERROR
       - CORE_LOGGING_LEVEL=DEBUG
       - CORE_PEER_TLS_ENABLED=true
