--- a/fabric-多机-kafka/正式环境/22/docker-compose-peer.yaml
+++ b/fabric-多机-kafka/正式环境/22/docker-compose-peer.yaml
@@ -7,21 +7,29 @@ version: '2'
 
 services:
 
- #  couchdb1.org1.lychee.com:
-  #   container_name: couchdb1.org1.lychee.com
- #    image: hyperledger/fabric-couchdb
-  #   volumes:
-  #     - ./chainData/couchdb/couchdb1org1:/opt/couchdb/data
+ couchdb1:
+   container_name: couchdb1
+   image: hyperledger/fabric-couchdb:0.4.10
+   volumes:
+     - ./chainData/couchdb/couchdb1org1:/opt/couchdb/data
+#   environment:
+#     - COUCHDB_USER=admin
+#     - COUCHDB_PASSWORD=password
+   ports:
+     - "5984:5984"
 
-  peer1.org1.hf.chainhero.io:
-    container_name: peer1.org1.hf.chainhero.io
-    extends:
-       file:  base/docker-compose-base.yaml
-       service: peer1.org1.hf.chainhero.io
-    #environment:
-   #   - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-    #  - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb1.org1.lychee.com:5984
-    extra_hosts:
-      - "orderer.hf.chainhero.io:114.115.200.251"
-      - "orderer1.hf.chainhero.io:39.104.77.237"
-      - "peer0.org1.hf.chainhero.io:114.115.200.251"
+ peer1.org1.hf.chainhero.io:
+  container_name: peer1.org1.hf.chainhero.io
+  extends:
+     file:  base/docker-compose-base.yaml
+     service: peer1.org1.hf.chainhero.io
+  environment:
+    - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+    - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb1:5984
+  depends_on:
+    - couchdb1
+  extra_hosts:
+    - "orderer.hf.chainhero.io:114.115.200.251"
+    - "orderer1.hf.chainhero.io:47.90.98.63"
+    - "peer0.org1.hf.chainhero.io:114.115.200.251"
+
